# synthetic_map

./: .gitignore  Instruksjon.md  Oppgavebeskrivelse.md  README.md  pyproject.toml  requirements.txt  synthetic_ar5_module.py  synthetic_bygning_module.py  synthetic_hoydekurve.gpkg-shm  synthetic_hoydekurve.py  synthetic_hoydekurve_legacy.py  synthetic_hoydekurve_module.py  synthetic_map.py  synthetic_vann_module.py  synthetic_vegnett_module.py
.github/: copilot-instructions.md
